public/styl/main.styl
@import 'nib'

body, html
	height 100%
	width 100%
	padding 0
	margin 0
	overflow hidden
	font-family 'Open Sans', sans-serif
	box-sizes: border-box

/*------------------------------------------------------------------
Scrollbars
------------------------------------------------------------------*/
.scrollBarBox{
    width: 100%;
    height:100%;
    position:relative;
    display:inline-block;
    border-top:1px solid #ebebeb; /*FOR IE*/
    border-bottom:1px solid #ebebeb; /*FOR IE*/
    border-top:1px solid rgba(0, 0, 0, 0.1);
    border-bottom:1px solid rgba(0, 0, 0, 0.1);
    -webkit-box-sizing:border-box;
}
.scrollBarInner{
    height: 100%;
    overflow: auto;
    padding: 5px 15px 15px 15px;
}
/*.scrollBarInner::after,*/
.scrollBarInner .shadow{
    width:100%;
    margin-right:0;
    height:8px;
    position:absolute;
    top:0;
    left:0;
    background:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,.2)), to(rgba(0,0,0,0)));
    -webkit-mask-box-image:-webkit-gradient(linear, left top, right top, color-stop(0.0, rgba(0,0,0,0)), color-stop(0.5, rgba(0,0,0,.8)), color-stop(1.0, rgba(0,0,0,0)));
    opacity:0;
}
.scrollBarInner.scrolling .shadow{
    opacity:1;
}

::-webkit-scrollbar {
    width: 15px;
    background: rgba(244, 34, 34, 0);
    overflow:visible;

}
::-webkit-scrollbar-thumb:vertical {
    height: 1px;
    background-color: rgba(0,0,0,0.2);
    border-right: 4px solid #FFF;
    border-left: 4px solid #FFF;
    border-top: 6px solid #FFF;
    border-bottom: 6px solid #FFF;
}
::-webkit-scrollbar-thumb:vertical:hover {
    background-color: rgba(0,0,0,0.4);
}
.option_2 .scrollBarInner::-webkit-scrollbar-button, .option_3 .scrollBarInner::-webkit-scrollbar-button{
    display: block;
    width:15px;
    height:15px;
    opacity:0;
}
.option_2 .scrollBarInner::-webkit-scrollbar-button:end:decrement, .option_3 .scrollBarInner::-webkit-scrollbar-button:start:decrement{
    background:url('../images/scroller_arrow_up.png');
}
.option_2 .scrollBarInner::-webkit-scrollbar-button:end:increment, .option_3 .scrollBarInner::-webkit-scrollbar-button:end:increment{
    background:url('../images/scroller_arrow_down.png');
}
.option_2 .scrollBarInner::-webkit-scrollbar-button:end:decrement:hover, .option_3 .scrollBarInner::-webkit-scrollbar-button:start:decrement:hover{
    background:url('../images/scroller_arrow_up_over.png');
}
.option_2 .scrollBarInner::-webkit-scrollbar-button:end:increment:hover, .option_3 .scrollBarInner::-webkit-scrollbar-button:end:increment:hover{
    background:url('../images/scroller_arrow_down_over.png');
}
.option_2 .scrollBarInner::-webkit-scrollbar-button:start:decrement,
.option_2 .scrollBarInner::-webkit-scrollbar-button:start:increment,
.option_3 .scrollBarInner::-webkit-scrollbar-button:start:increment{
    display:none;
}
.option_3 .scrollBarInner::-webkit-scrollbar-button:end:decrement{
    display:none;
}

#login-form, #localisation-new
	& > div
		background white
		width 400px
		height 210px
		position absolute
		margin auto
		top 0
		left 0
		right 0
		bottom 0
		box-shadow 0px 0px 15px 0px #000

#localisation-new
	& > div
		height 260px

#localisation-new
	& > div
		padding 15px
		#localisation-new-ok, #localisation-new-cancel
			height 30px
			width 80px
			margin 2%
			float right
			cursor pointer		
		select
			width 100px
			margin 5px 0px
		input
			width 70%
			margin 7px auto

input
	width 90%
	height 20px
	padding 6px 5px	
	font-size 13px
	border 1px solid #ccc
	border-radius 4px
	box-shadow inset 0 1px 1px rgba(0,0,0,.075)
	transition border-color ease-in-out .15s,box-shadow ease-in-out .15s
	&:focus
		border-color #66afe9
		outline 0
		box-shadow inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6)

#language-search
	width 200px

#data-controls-panel
	height 10%
	#localisation-changed-only, #localisation-missed-only
		width 20px
	#localisation-controls
		width 56%
		float left
		padding 0 2%
	#language-controls
		width 40%
		float left

#localisation-controls
	input
		width 200px
		margin auto

#sp-key
	width 300px
	height 100px
	padding 50px

#sp-key-value
	height 30px
	font-size 11px

#sp-key-ok
	width 70px
	height 30px
	float right
	margin-top 55px
	cursor pointer

#container
	width 60%
	height 95%
	margin auto
	padding-top 2%
	display none
	&.visible
		display block

@media (max-width: 1700px) {
	#container {
		width: 80%;
	}
}

@media (max-width: 1300px) {
	#container {
		width 100%;
	}
}

@media (max-width: 1000px) {
	#container #data {
		width: 75%;
	}
}

.worksheet
	height: auto
	width: 100%
	padding: .2rem
	display none
	cursor pointer
	&:hover
		.worksheet-name
			color: #444
	&.selected
		.worksheet-name
			color: #444
			background: #eee
	.worksheet-name
		color: #aaa

#worksheets
	width 15%
	min-width 150px
	float left
	height 90%

#data
	width 85%
	float left
	height 90%
	overflow-y: auto
	overflow-scrolling: touch

.translation-item, .history-translation-item
	transform translate3d(0,0,0)
	overflow hidden
	position relative
	padding 10px
	margin 0px 3px
	cursor pointer
	transition: background-color .08s linear
	border-bottom solid 1px #eee
	.translation-buttons-section
		overflow hidden
	&.changed
		box-shadow: 0 0 3px 1px #FF0A0A
		border: 1px solid rgb(255, 108, 108)
		/*background rgba(255,0,0,0.3)*/
		.translation-actions
			display block

		&:hover
			box-shadow: 0 0 3px 1px #FF0A0A
	.translation-actions
		display none
		position absolute
		top 0
		right 0
		padding 4px
	&:hover
		//box-shadow 0px 0px 3px 1px #1961CC
		background-color: #F4F4F4

		.translation-history
			opacity: 1
.fa-key, .fa-refresh, .fa-home, .fa-comments
	padding-right: .5rem
	font-size: .9rem
	color: #aaa

.translation-history, .translation-key, .translation-context
	position: relative
	float: right
	font-size: .6rem
	color: #aaa
	padding-right: .5rem
	transition: all .2s linear
	opacity: 0
	font-weight: 600
	&:hover
		color: #555

.translation-key, .translation-context
	float: left
	opacity: 1
	cursor: initial
	font-weight: 400
	.fa-key
		padding-right: .2rem

	&:hover
		color: #aaa
.translation-value
	color: #444
	font-size: 1rem
.translation-original
	padding-bottom: .3rem
	color: #888
	font-size: .9rem

.translation-buttons-section 
	/*.translation-history,*/ 
	.translation-apply, 
	.translation-cancel
		width 25px
		height 25px
		float left
		padding 3px
		font-size 25px
		text-align center
		line-height 25px
		transition color 0.18s linear

.translation-apply
	&:hover
		color green

.translation-cancel
	&:hover
		color red

#translation-content
	height 100%
	transform: translate3d(0,0,0)

#popup
	position absolute
	top 0
	left 0
	width 100%
	height 100%
	display none
	&.visible
		display block
		& > ul
			opacity 1
			visibility visible
		.visible
			opacity 1
			visibility visible
			-webkit-transform scale(1)
			transform scale(1)
	& > ul
		position absolute
		top 0
		left 0
		bottom 0
		right 0
		margin 0
		padding 0
		list-style none
		background-color rgba(0,0,0,0.3)
		z-index 1100
		opacity 0
		visibility hidden
		transition all 0.4s ease-in-out 0s
	li
		position absolute
		height 80%
		width 94%
		max-width 980px
		top 0
		bottom 0
		left 0
		right 0
		margin auto auto
		z-index 1200
		opacity 0
		visibility hidden
		transition all 0.4s ease-in-out 0s
		transform scale(0)

#history
	& > div
		background white
		width 80%
		margin auto
	#history-items
		height 80%
		border-radius 4px 4px 0px 0px
		padding-top 4px
	#close-button-container
		height 20%
		position relative
		border-radius 0px 0px 4px 4px
		#close-button
			position absolute
			right 0
			bottom 0
			height 50px
			width 15%
			margin: 2% 2%
			float right
			cursor pointer

#spinner
	& > div
		width 30%
		height 50%
		position absolute
		top 0
		left 0
		right 0
		bottom 0
		margin auto

.loader
	font-size 20px
	margin 5em auto
	width 1em
	height 1em
	border-radius 50%
	position relative
	text-indent -9999em
	animation load4 1.3s infinite linear

@keyframes load4 {
	0%,
	100% {
		box-shadow: 0em -3em 0em 0.2em #ffffff, 2em -2em 0 0em #ffffff, 3em 0em 0 -0.5em #ffffff, 2em 2em 0 -0.5em #ffffff, 0em 3em 0 -0.5em #ffffff, -2em 2em 0 -0.5em #ffffff, -3em 0em 0 -0.5em #ffffff, -2em -2em 0 0em #ffffff
	}
	12.5% {
		box-shadow: 0em -3em 0em 0em #ffffff, 2em -2em 0 0.2em #ffffff, 3em 0em 0 0em #ffffff, 2em 2em 0 -0.5em #ffffff, 0em 3em 0 -0.5em #ffffff, -2em 2em 0 -0.5em #ffffff, -3em 0em 0 -0.5em #ffffff, -2em -2em 0 -0.5em #ffffff
	}
	25% {
		box-shadow: 0em -3em 0em -0.5em #ffffff, 2em -2em 0 0em #ffffff, 3em 0em 0 0.2em #ffffff, 2em 2em 0 0em #ffffff, 0em 3em 0 -0.5em #ffffff, -2em 2em 0 -0.5em #ffffff, -3em 0em 0 -0.5em #ffffff, -2em -2em 0 -0.5em #ffffff
	}
	37.5% {
		box-shadow: 0em -3em 0em -0.5em #ffffff, 2em -2em 0 -0.5em #ffffff, 3em 0em 0 0em #ffffff, 2em 2em 0 0.2em #ffffff, 0em 3em 0 0em #ffffff, -2em 2em 0 -0.5em #ffffff, -3em 0em 0 -0.5em #ffffff, -2em -2em 0 -0.5em #ffffff
	}
	50% {
		box-shadow: 0em -3em 0em -0.5em #ffffff, 2em -2em 0 -0.5em #ffffff, 3em 0em 0 -0.5em #ffffff, 2em 2em 0 0em #ffffff, 0em 3em 0 0.2em #ffffff, -2em 2em 0 0em #ffffff, -3em 0em 0 -0.5em #ffffff, -2em -2em 0 -0.5em #ffffff
	}
	62.5% {
		box-shadow: 0em -3em 0em -0.5em #ffffff, 2em -2em 0 -0.5em #ffffff, 3em 0em 0 -0.5em #ffffff, 2em 2em 0 -0.5em #ffffff, 0em 3em 0 0em #ffffff, -2em 2em 0 0.2em #ffffff, -3em 0em 0 0em #ffffff, -2em -2em 0 -0.5em #ffffff
	}
	75% {
		box-shadow: 0em -3em 0em -0.5em #ffffff, 2em -2em 0 -0.5em #ffffff, 3em 0em 0 -0.5em #ffffff, 2em 2em 0 -0.5em #ffffff, 0em 3em 0 -0.5em #ffffff, -2em 2em 0 0em #ffffff, -3em 0em 0 0.2em #ffffff, -2em -2em 0 0em #ffffff
	}
	87.5% {
		box-shadow: 0em -3em 0em 0em #ffffff, 2em -2em 0 -0.5em #ffffff, 3em 0em 0 -0.5em #ffffff, 2em 2em 0 -0.5em #ffffff, 0em 3em 0 -0.5em #ffffff, -2em 2em 0 0em #ffffff, -3em 0em 0 0em #ffffff, -2em -2em 0 0.2em #ffffff
	}
}

